--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>5.0.0</version>
+    <version>5.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -72,27 +72,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -131,14 +131,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>5.0.0</version>
+                <version>5.0.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -316,7 +316,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>5.0.0</version>
+                            <version>5.0.1-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -414,8 +414,4 @@
             </build>
         </profile>
     </profiles>
-
-  <scm>
-    <tag>okta-sdk-root-5.0.0</tag>
-  </scm>
 </project>
