--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
                             </goals>
                             <phase>generate-sources</phase>
                             <configuration>
+                                <skip>${exec.skip}</skip>
                                 <executable>sh</executable>
                                 <arguments>
                                     <argument>-c</argument>
