Added empty params to listAuthenticators definition

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -1037,6 +1037,7 @@ paths:
         - application/json
       description: Success
       operationId: listAuthenticators
+      parameters: []
       produces:
         - application/json
       responses:
