okta-420838: moved away from inline AllowedForEnum definition

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -7502,6 +7502,15 @@ definitions:
         type: string
     x-okta-tags:
       - UserFactor
+  AllowedForEnum:
+    enum:
+      - recovery
+      - sso
+      - any
+      - none
+    type: string
+    x-okta-tags:
+      - Authenticator
   AppAndInstanceConditionEvaluatorAppOrInstance:
     properties:
       id:
@@ -8188,12 +8197,7 @@ definitions:
   AuthenticatorSettings:
     properties:
       allowedFor:
-        enum:
-          - recovery
-          - sso
-          - any
-          - none
-        type: string
+        $ref: '#/definitions/AllowedForEnum'
       tokenLifetimeInMinutes:
         type: integer
     type: object
