--- a/pom.xml
+++ b/pom.xml
@@ -302,16 +302,20 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.zalando.maven.plugins</groupId>
+                    <groupId>io.swagger.codegen.v3</groupId>
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>0.5.0-beta-1</version>
-                    <configuration>
-                        <!-- This is relative to a direct sub module -->
-                        <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
-                        <additionalProperties>
-                            <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
-                        </additionalProperties>
-                    </configuration>
+                    <version>3.0.27</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                            <configuration>
+                                <inputSpec />
+                                <language />
+                            </configuration>
+                        </execution>
+                    </executions>
                     <dependencies>
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
