--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -27,15 +27,11 @@
     <artifactId>okta-api-swagger-templates</artifactId>
     <name>Okta Java SDK :: Swagger Templates</name>
 
-    <properties>
-        <swagger-version>2.2.3</swagger-version>
-    </properties>
-
     <dependencies>
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-codegen</artifactId>
-            <version>${swagger-version}</version>
+            <groupId>io.swagger.codegen.v3</groupId>
+            <artifactId>swagger-codegen-generators</artifactId>
+            <version>1.0.27</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
