--- a/api/pom.xml
+++ b/api/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>javax.annotation-api</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.1.10</version>
+        </dependency>
     </dependencies>
 
     <build>
